# computegraph-rs

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/plans/: 2026-04-03-computegraph-engine.md
src/: compile.rs  eval.rs  fragment.rs  graph.rs  interner.rs  lib.rs  materialize.rs  resolve.rs  traits.rs  types.rs
tests/: scalar_tests.rs
tests/common/: mod.rs
