[package]
name = "computegraph"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
authors = ["Hiroshi Shinaoka <h.shinaoka@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "AD-agnostic tensor computation graph engine: construction, logical resolution, physical materialization, SSA compilation, and evaluation."
repository = "https://github.com/tensor4all/computegraph-rs"
readme = "README.md"
keywords = ["computation-graph", "tensor", "compiler", "graph", "ssa"]
categories = ["data-structures", "mathematics"]

[workspace]
